track service with audio service reworked